# onednnl-rs

./: Cargo.toml  README.md  TODOS.md  rustfmt.toml  script.py
.github/workflows/: ci-intel.yml
benches/: binary.rs
src/: engine.rs  error.rs  graph.rs  lib.rs  memory.rs  primative.rs  primitive.rs  primitives.rs  stream.rs
src/graph/: compiled_partition.rs  graph.rs  op.rs  ops_builders.rs  partition.rs  spec.rs  tensor.rs
src/graph/ops_builders/: abs.rs  abs_backward.rs  add.rs  avg_pool.rs  avg_pool_backward.rs  batch_norm_inference.rs  bias_add.rs  clamp.rs  concat.rs  convolution.rs  divide.rs  elu.rs  end.rs  exp.rs  gelu.rs  matmul.rs  max_pool.rs  multiply.rs  reorder.rs  sigmoid.rs  softmax.rs  static_reshape.rs  subtract.rs
src/graph/tensor/: logical.rs  tensor.rs
src/memory/: buffer.rs  descriptor.rs  format_tag.rs
src/primitive/: attributes.rs  config.rs  descriptor.rs
src/primitive/config/: au_gru.rs  batch_norm.rs  binary.rs  eltwise.rs  inner_product.rs  matmul.rs  prelu.rs  reduction.rs
src/primitives/: au_gru.rs  batch_norm.rs  binary.rs  eltwise.rs  inner_product.rs  matmul.rs  prelu.rs  reduction.rs
tests/: test_inner_product.rs  test_relu.rs  test_smoke.rs
