[package]
name = "onednnl"
version = "0.0.1"
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/onednnl"
description = "high-level bindings to oneDNN Deep Learning library"

[dependencies]
onednnl-sys = "0.0.1"

[features]
default = []
bindings = ["onednnl-sys/bindings"]

[package.metadata.docs.rs]
features = ["bindings"]
